<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:foregroundGravity="center"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="27dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="11dp"
        tools:context=".DataDetails">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/totalGraph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@+id/totalCasesData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/totalCasesData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/total_cases_graph"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/activeGraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalGraph" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/activeGraph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/confirmData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalCasesData" />

        <TextView
            android:id="@+id/confirmData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/daily_confirmed"
            android:textColor="#FF0000FF"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/deathGraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activeGraph" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/deathGraph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/deathData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmData" />

        <TextView
            android:id="@+id/deathData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/deaths_graph"
            android:textColor="#FFFF0000"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/recGraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deathGraph" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/recGraph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/recData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deathData" />

        <TextView
            android:id="@+id/recData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:text="@string/recovered"
            android:textColor="#FF00FF00"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recGraph" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>